chore: harden java skill guidance and validation