@@ -3,16 +3,16 @@ title: GC Log Interpretation
 impact: MEDIUM
 impactDescription: GC logs tell you pause frequency, GC cause, and whether tuning helps — the diagnostic for memory pressure
 tags: gc-logs, xlog, gceasy, pauses, memory-pressure
-description: Enable -Xlog:gc* in prod; read pause times, GC cause, and old-gen occupancy; upload to GCEasy for visualization
+description: Capture bounded GC logs, correlate pauses and occupancy with workload metrics, and use approved local or external analysis tools without leaking operational data
 ---
 
 ## GC Log Interpretation
 
-GC logs are the diagnostic for memory behavior: how often the JVM pauses, how long, and why. Enable them always in prod; read them when you have a memory or pause problem.
+GC logs are primary evidence for memory behavior: how often the JVM pauses, how long, and why. Enable bounded, rotated logging when operational policy and disk budget allow it, then correlate with application latency, allocation, traffic, and container metrics.
 
 ### Why it matters
 
-- **Pauses show up here first** — a p99 latency spike almost always corresponds to a GC pause; the log tells you which kind.
+- **Pauses can explain latency spikes** — compare timestamps before attributing p99 latency to GC; network, locks, downstreams, CPU throttling, and safepoints can look similar.
 - **Trends reveal leaks** — old-gen occupancy climbing over hours/days is the early warning of an OOM.
 - **Cause codes** tell you why the GC ran — `Allocation Failure`, `System.gc()`, `Metadata GC Threshold`, etc.
 
@@ -47,44 +47,45 @@ What each part means:
 
 **1. Pause frequency and duration**
 - How often does a pause happen? Once per second under load? Once per minute?
-- How long? <100ms is healthy for most services; >1s is a problem.
+- Compare pause duration and frequency to the service's actual latency/throughput SLO; there is no universal healthy threshold.
 - Trends: increasing pause duration over time = heap filling or fragmentation.
 
 **2. Heap occupancy before/after GC**
 - After young GC, young-gen should be mostly empty.
-- After old-gen GC, old-gen should drop. If old-gen **never drops** despite GC → memory leak (see `jvm/jvm-oom-analysis.md`).
+- If post-GC old-generation occupancy trends upward across comparable load windows, investigate retained data, cache growth, workload shifts, and leaks (see `jvm/jvm-oom-analysis.md`).
 
 **3. GC cause**
 - `Allocation Failure` — normal young-gen trigger.
-- `System.gc()` — somewhere in code calls `System.gc()`; remove it.
+- `System.gc()` — code or a library requested collection; identify the caller and reason before changing behavior.
 - `Metadata GC Threshold` — metaspace filling; class-loading leak.
 - `Last ditch collection` — a full GC after a failed young GC; serious memory pressure.
-- `Heap Inspection Initiated GC` — `jcmd GC.heap_info` or similar; not a problem.
+- `Heap Inspection Initiated GC` — a diagnostic operation may have requested collection; correlate it with operator/tool activity.
 
 **4. Concurrent cycle timing (G1)**:
 - `[gc] GC(50) Concurrent Cycle` — the concurrent mark cycle. These don't pause (mostly) but indicate old-gen is filling.
-- If concurrent cycles run constantly, you're near capacity.
+- Frequent concurrent cycles indicate sustained old-generation pressure or allocation; compare post-cycle occupancy and allocation rate before concluding capacity is insufficient.
 
 ### Common patterns and their meaning
 
 **Frequent young GCs, short pauses, heap returns low** → healthy. Memory pressure is fine; this is normal allocation churn.
 
-**Young GCs with growing pauses** → either young-gen too small (resize with `-XX:G1NewSizePercent`), or objects aren't dying young (check allocation patterns — maybe a hot allocator).
+**Young GCs with growing pauses** → inspect allocation rate, survivor promotion, remembered-set work, CPU availability, and heap-region behavior. Do not apply `G1NewSizePercent` or other experimental flags without before/after evidence.
 
 **Full GC** (`Pause Full (G1 Compaction Pause)`) → serious. G1 should avoid full GCs. Causes:
 - Old-gen filled before concurrent cycle could keep up (heap too small).
 - Humongous allocations (objects >50% of region size in G1).
 - Memory leak.
 
-**`System.gc()` pauses** → a library or code calls it. Find and remove:
+**`System.gc()` pauses** → locate the caller and determine whether it is accidental or required by a library/operational workflow:
 ```bash
 grep -r "System.gc()\|Runtime.getRuntime().gc()" src/
-# or use -XX:+DisableExplicitGC to ignore them
 ```
+
+Do not add `-XX:+DisableExplicitGC` blindly; it changes JVM/library behavior and can delay cleanup patterns that depend on explicit collection.
 
 ### Tools to interpret
 
-**GCEasy** (gceasy.io) — upload the log, get pause frequency, throughput %, heap-occupancy graphs, and recommendations. The fastest way to analyze a log.
+**GCEasy** (gceasy.io) — external hosted analysis. Upload only when organizational policy allows it and the log has been reviewed for hostnames, paths, tenant identifiers, or other operational data.
 
 **GCViewer** — desktop tool, similar visualizations.
 
@@ -133,11 +134,11 @@ When analyzing GC logs:
 - [ ] After-GC heap occupancy stable (not climbing = leak)?
 - [ ] GC cause checked — any `System.gc()`?
 - [ ] No full GCs (or understood why they happen)?
-- [ ] Log uploaded to GCEasy for visualization?
+- [ ] Log analyzed with an approved local or external tool, with data-handling policy respected?
 
 ### Context
 
 - **Java 9+ unified logging** replaced the Java 8 `-XX:+PrintGCDetails` flags entirely. Don't use the old syntax on Java 17+.
-- **Log volume**: ~1-10MB/hour for a typical service. Rotation (`filecount=10,filesize=50M`) keeps it bounded.
+- **Log volume**: depends on event selection and workload. Measure it and keep rotation bounded (`filecount`/`filesize`) so diagnostics cannot exhaust disk.
 - **GC logs + Micrometer**: `jvm.gc.pause`, `jvm.gc.live.data.size` metrics expose the same info as time-series for dashboards. Pairs well with logs for forensics.
 - **Cross-ref**: tuning in response to log findings in `jvm/jvm-gc-tuning.md`; OOM investigation in `jvm/jvm-oom-analysis.md`; container memory sizing in `spring-boot/sb-config-profiles.md`.
